--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "class-validator": "^0.14.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
+    "mongoose-paginate-v2": "^1.7.1",
+    "mongoose-unique-validator": "^4.0.0",
+    "mongoose-validation-error-transform": "^0.0.6",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
@@ -45,6 +48,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/mongoose-unique-validator": "^1.0.7",
     "@types/node": "^20.3.1",
     "@types/passport-jwt": "^3.0.9",
     "@types/supertest": "^2.0.12",
