--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
+    "mongoose-find-by-reference": "^1.0.5",
     "mongoose-paginate-v2": "^1.7.1",
     "mongoose-unique-validator": "^4.0.0",
     "mongoose-validation-error-transform": "^0.0.6",
